# how-to-compile-your-language

./: CMakeLists.txt
.github/workflows/: pipeline.yml
include/: codegen.h
src/: CMakeLists.txt  codegen.cpp  driver.cpp
test/codegen/: alloca_order.yl  condition_empty_merge.yl  constexpr.yl  if_conditional_binop_condition.yl  lazy_init_variable.yl  multiple_return_if.yl  multiple_return_while.yl  println.yl  return.yl  unary_negate.yl  while_empty_exit.yl  while_empty_exit_ret.yl
